[gd_scene load_steps=7 format=3 uid="uid://bk04t8ig150fr"]

[ext_resource type="Texture2D" uid="uid://c4fbhe40i1gua" path="res://grim_reaper/assets/Promote.png" id="1_gsmwm"]
[ext_resource type="Script" uid="uid://j6hptunfidj1" path="res://grim_reaper/GrimReaperUI.gd" id="1_t5gxf"]
[ext_resource type="Texture2D" uid="uid://cfxw4kce5pjl8" path="res://grim_reaper/assets/Stasis.png" id="2_t5gxf"]
[ext_resource type="Texture2D" uid="uid://bkn36gvije4u" path="res://grim_reaper/assets/Haste.png" id="3_22ifn"]
[ext_resource type="Texture2D" uid="uid://dtkswhj6f3ups" path="res://grim_reaper/assets/Corpse_Explosion.png" id="4_mn1u1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_172a3"]
bg_color = Color(0.164706, 0.00392157, 0.203922, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[node name="GrimReaperUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t5gxf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 226.0
offset_top = 548.0
offset_right = 926.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_172a3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 558.0
offset_right = 808.0
offset_bottom = 630.0
theme_override_constants/separation = 40

[node name="PromoteButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "1"
icon = ExtResource("1_gsmwm")

[node name="StasisButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "2"
icon = ExtResource("2_t5gxf")

[node name="HasteButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "3"
icon = ExtResource("3_22ifn")

[node name="CorpseExplosionButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "4"
icon = ExtResource("4_mn1u1")
